--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                     <div class="hero__content">
                         <h1 class="hero__title">안녕하세요</h1>
                         <p class="hero__description">
-                            Full-stack developer passionate about creating clean and performant web experiences.
+                            This sentence is just a placeholder filled with dancing commas and imaginary ideas.
+                            This sentence is just a placeholder filled with dancing commas and imaginary ideas.
+                            This sentence is just a placeholder filled with dancing commas and imaginary ideas.
                         </p>
                         <a href="resume.pdf" class="btn" aria-label="이력서 다운로드">Resume</a>
                         <div class="social-links">
@@ -118,8 +120,10 @@
                             <h3 class="experience-card__title">우리 FISA</h3>
                             <ul class="experience-card__list">
                                 <li>클라우드 서비스 개발 과정</li>
-                                <li>풀스택 개발 역량 강화</li>
-                                <li>협업 프로젝트 경험</li>
+                                <li>This sentence is just a placeholder filled with dancing commas and imaginary ideas.
+                                </li>
+                                <li>This sentence is just a placeholder filled with dancing commas and imaginary ideas.
+                                </li>
                             </ul>
                         </div>
                         <div class="experience-card__date">Jul 2025 – Present</div>
@@ -134,7 +138,8 @@
                                 <li>백엔드 트랙 수료</li>
                                 <li>아이디어톤 참여</li>
                                 <li>중앙 해커톤 참여</li>
-                                <li>팀 프로젝트 협업</li>
+                                <li>This sentence is just a placeholder filled with dancing commas and imaginary ideas.
+                                </li>
                             </ul>
                         </div>
                         <div class="experience-card__date">Mar 2023 – Dec 2023</div>
@@ -158,18 +163,14 @@
                         <div class="project-card__description">
                             <h3 class="project-card__title">프로젝트 1</h3>
                             <p class="project-card__text">
-                                Modern web application built with cutting-edge technologies for optimal performance and
-                                user experience.
+                                This sentence is just a placeholder filled with dancing commas and imaginary ideas.
                             </p>
                             <div class="project-card__tags">
-                                <span class="tag">Node.js</span>
-                                <span class="tag">TypeScript</span>
-                                <span class="tag">Docker</span>
-                                <span class="tag">Firebase</span>
-                                <span class="tag">Express.js</span>
-                                <span class="tag">PostgreSQL</span>
-                                <span class="tag">GraphQL</span>
-                                <span class="tag">Redis</span>
+                                <span class="tag">Node.js</span><span class="tag">TypeScript</span><span
+                                    class="tag">Docker</span>
+                                <span class="tag">Firebase</span><span class="tag">Express.js</span><span
+                                    class="tag">PostgreSQL</span>
+                                <span class="tag">GraphQL</span><span class="tag">Redis</span>
                             </div>
                             <a href="https://github.com/" class="project-card__link" target="_blank"
                                 aria-label="프로젝트 1 GitHub">
@@ -189,21 +190,16 @@
                         <div class="project-card__description">
                             <h3 class="project-card__title">프로젝트 2</h3>
                             <p class="project-card__text">
-                                Enterprise-level application with robust backend architecture and comprehensive testing
-                                coverage.
+                                This sentence is just a placeholder filled with dancing commas and imaginary ideas.
                             </p>
                             <div class="project-card__tags">
-                                <span class="tag">Java</span>
-                                <span class="tag">Spring Boot</span>
-                                <span class="tag">JPA</span>
-                                <span class="tag">Hibernate</span>
-                                <span class="tag">PostgreSQL</span>
-                                <span class="tag">Spring Security</span>
-                                <span class="tag">Redis</span>
-                                <span class="tag">JUnit</span>
-                                <span class="tag">Swagger</span>
-                                <span class="tag">Docker</span>
-                                <span class="tag">AWS</span>
+                                <span class="tag">Java</span><span class="tag">Spring Boot</span><span
+                                    class="tag">JPA</span>
+                                <span class="tag">Hibernate</span><span class="tag">PostgreSQL</span><span
+                                    class="tag">Spring Security</span>
+                                <span class="tag">Redis</span><span class="tag">JUnit</span><span
+                                    class="tag">Swagger</span>
+                                <span class="tag">Docker</span><span class="tag">AWS</span>
                             </div>
                             <a href="https://github.com/" class="project-card__link" target="_blank"
                                 aria-label="프로젝트 2 GitHub">
@@ -212,6 +208,34 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-card__content">
+                        <div class="project-card__image">
+                            <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                                <img src="img/computer.png" alt="프로젝트 3 스크린샷">
+                            </a>
+                        </div>
+                        <div class="project-card__description">
+                            <h3 class="project-card__title">프로젝트 3</h3>
+                            <p class="project-card__text">
+                                This sentence is just a placeholder filled with dancing commas and imaginary ideas.
+                            </p>
+                            <div class="project-card__tags">
+                                <span class="tag">Node.js</span><span class="tag">TypeScript</span><span
+                                    class="tag">Docker</span>
+                                <span class="tag">Firebase</span><span class="tag">Express.js</span><span
+                                    class="tag">PostgreSQL</span>
+                                <span class="tag">GraphQL</span><span class="tag">Redis</span>
+                            </div>
+                            <a href="https://github.com/" class="project-card__link" target="_blank"
+                                aria-label="프로젝트 1 GitHub">
+                                🔗
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -222,11 +246,11 @@
                 <div class="grid grid--auto-fit">
                     <div class="card">
                         <h3>알고리즘 스터디</h3>
-                        <p>주요 알고리즘 문제 해결 및 최적화 연구</p>
+                        <p>알고리즘 스터디!</p>
                     </div>
                     <div class="card">
-                        <h3>개발 서적 스터디</h3>
-                        <p>Clean Code, 객체지향 설계 등 개발 서적 학습</p>
+                        <h3>개발 스터디</h3>
+                        <p>개발 스터디!</p>
                     </div>
                 </div>
             </div>
@@ -245,7 +269,7 @@
                         </div>
                         <div class="contact__item">
                             <i class="fas fa-phone"></i>
-                            <span id="phone">+82 10-1234-5678</span>
+                            <span id="phone">010-8803-1249</span>
                             <img src="img/copy.png" alt="전화번호 복사" class="copy-btn" data-copy="phone">
                         </div>
                     </div>
